<resources>
    <string name="app_name">BusRoutes</string>
    <string name="already_registered_login_now">Already registered ? Login Now !</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="logo_image">logo image</string>
    <string name="register">Register</string>
    <string name="empty_field">Empty Field</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered? Register now!</string>
    <string name="under_construction">Under Construction!</string>
</resources>
